[package]
name = "rustfilm"
version = "0.1.0"
authors = ["aftix <aftix@aftix.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={ version = "1.0.117", features=["derive"]}
num="0.3.1"
nalgebra="0.23.1"
float-cmp="0.5.2"
clap="2.33.3"
